@@ -99,13 +99,11 @@ TAO::TypeCode::Alias<char const *,
 CORBA::TypeCode_ptr
 TAO::TypeCode::Alias<char const *,
                      CORBA::TypeCode_ptr const *,
-                     TAO::Null_RefCount_Policy>::get_compact_typecode_i (
-  void) const
+                     TAO::Null_RefCount_Policy>::get_compact_typecode_i (void) const
 {
   TAO_TypeCodeFactory_Adapter * const adapter =
     ACE_Dynamic_Service<TAO_TypeCodeFactory_Adapter>::instance (
-        TAO_ORB_Core::typecodefactory_adapter_name ()
-      );
+        TAO_ORB_Core::typecodefactory_adapter_name ());
 
   if (adapter == 0)
     {
